src/components/featurepane/featurepane.scss
/**
 * FeaturePane Component Variables
 */
$mappinger-green: #00dd70;
$mappinger-green-dark: #009b20;

$feature-pane-width: 380px;

/**
 * FeaturePane Component Styles
 */
#feature-pane {
  position: absolute;
  z-index: 99;
  left: 0;
  top: 0;
  bottom: 0;
  width: $feature-pane-width;
  background-color: rgba(34,34,34,0.9);
  color: #fff;
  box-shadow: 0 0 20px rgba(0,0,0,0.33);
  transition: opacity 1s ease-out;
}

.feature-head {
  position: relative;
  height: 33vh;
  min-height: 240px;
  width: 100%;
  margin-bottom: 20px;
  overflow: auto;
  background-color: $mappinger-green;
}

.feature-title-wrapper {
  position: absolute;
  bottom: 0px;
  padding: 20px;
  width: 100%;
  z-index: 2;
  overflow: hidden;
}
.feature-title-wrapper.has-image {
    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.3) 100%);
}
.feature-title-wrapper h1 {
    margin-bottom: 0;
    transition: text-shadow 500ms ease-out;
}
.feature-title-wrapper.has-image h1 {
    text-shadow: 0 0 10px rgba(0,0,0,0.7);
}

.feature-image {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;

  /* stuff for animation: */
  opacity: 0;
  display: block;
  transition: opacity 500ms ease-out;
}

.feature-image.show {
  opacity: 1;
}

.feature-image img {
  object-fit: cover;
  object-position: 50% 50%;
  width: 100%;
  height: 100%;
}

// loading bar
.loadinger {
    position: absolute;
    height: 2px;
    top: 33vh;
    left: 0;
    right: 0;
    overflow: hidden;
    z-index: 10;
    transform: translateY(-1px);

    &::after {
        display: block;
        content: "";
        height: 100%;
        background-color: #e83838;
        width: 70%;
        position: absolute;
        top: 0;
        transform: translate3d(0,0,0);
        animation: loadinger-animation 800ms cubic-bezier(0.68, 0.01, 0.26, 1.02) 0ms infinite;
    }

    &.hidden {
        display: none;
    }
}

@keyframes loadinger-animation {
  0% {
    transform: translate3d(-$feature-pane-width*0.7, 0, 0) scaleX(0.7);
  }
  100% {
    transform: translate3d($feature-pane-width, 0, 0) scaleX(1);
  }
}


// Feature Tags
.feature-tags {
    list-style: none;
    margin: 0;
    padding: 0 20px;
    font-size: 1.1rem;
}

.feature-tags li {
    padding: 0;
    border-left: 4px solid #676767;
    padding-left: 15px;
    margin-bottom: 10px;
}

// Links
a {
    &:link, &:visited {
        color: $mappinger-green;
    }
    &:focus, &:hover {
        color: $mappinger-green-dark;
    }
}

